// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createAspect method for instance should call pattern.beforeMethod and pattern.afterMethod 1`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": A {
      "variable": undefined,
    },
    "object": A {
      "variable": undefined,
    },
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for instance should call pattern.beforeMethod and pattern.afterMethod 2`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": A {
      "variable": undefined,
    },
    "object": A {
      "variable": undefined,
    },
    "payload": undefined,
    "property": "method",
    "target": [Function],
  },
]
`;
